project/visa/test/assembler/error/unused-macro.asm
macro var
  sleep
end
nop
